--- a/40.html
+++ b/40.html
@@ -2,7 +2,9 @@
 <html>
 <head>
 <!--<meta http-equiv="refresh" content="0; url=./4-53.html" />-->
-<meta http-equiv="refresh" content="0; url=./4-47-sa lokacijom-radi.html" />
+<!--<meta http-equiv="refresh" content="0; url=./4-47-sa-lokacijom-21.html" />-->
+
+<meta http-equiv="refresh" content="0; url=./4-54.html" />
 
 </head>
 
