--- a/5-05-prespeed.html
+++ b/5-05-prespeed.html
@@ -124,23 +124,19 @@
     display: flex;
 }
 .col1 {
-    /*background-color: yellow;*/
-	background-color: white;
-	
+    background-color: yellow;
     /*flex :0 0 100px;*/
 	overflow:scroll;
   overflow-scrolling: touch;
   z-index:600;
 }
 .col2 {
-    <*background-color: orange;*/
-	background-color: white;
+    background-color: orange;
     flex: 1 0;
 }
 .col3 {
     z-index:600;
-    /*background-color: gray;*/
-	background-color: white;
+    background-color: gray;
    /* flex: 0 0 200px;*/
 	
 	/*
@@ -204,7 +200,7 @@
 
 
 var dataForVue = {
-	wrtrMaxspeed : 50, //km
+	wrtrMaxSpead : 50, //km
 	wrtrMinTimeFromLast : 1,//s
 	wrtrMinDistance : 1 //m
 };
@@ -1299,7 +1295,7 @@ $("#range_02").ionRangeSlider({
             <div class="form-group">
               <label class="col-md-3" for="in_1">Max Brzina</label>
               <div class="col-md-2">
-			  <input  type="text" name="in_1" class="form-control" id="in_1" v-on:click.stop v-model.lazy.number="wrtrMaxspeed">
+			  <input  type="text" name="in_1" class="form-control" id="in_1" v-on:click.stop v-model.lazy.number="wrtrMaxSpead">
 			  </div>
 			 </div>
             <div class="form-group">
@@ -1406,13 +1402,10 @@ $("#range_02").ionRangeSlider({
 <span id="wportr_12" class="nadmeni nadmeni_0">Staze</span>
 <span id="wportr_13" class="nadmeni nadmeni_0">Zjale</span>
 <span id="wportr_14" class="nadmeni nadmeni_0">MojaFG</span>
-
-<!--
 <span id="col-minus" class="nadmeni nadmeni_0">-</span>
 <span id="col-plus" class="nadmeni nadmeni_0">+</span>
--->
 <span id="WSDivOpen" class="nadmeni nadmeni_0" onclick="readLog();">R</span>
-<span id="WSDivOpen" class="nadmeni nadmeni_0" onclick="writeLog(JSON.stringify(arrLocations, null, 4)); alert(JSON.stringify(arrLocations, null, 4));">W</span>
+<span id="WSDivOpen" class="nadmeni nadmeni_0" onclick="alert(JSON.stringify(arrLocations, null, 4));writeLog(JSON.stringify(arrLocations, null, 4)); ">W</span>
 <!--<span id="WSDivClose" class="nadmeni nadmeni_0" onclick="WSDiv('close');">0</span>-->
 <span id="WSDivOpen" class="nadmeni nadmeni_0" onclick="WSFormaDiv('open');">F</span>
 <span id="WSDivOpen" class="nadmeni nadmeni_0" onclick="resetLog();">X</span>
@@ -2583,7 +2576,7 @@ function openFile(fileName)	{
 }	
 	/********************** file 2 START  ***********/
 	var logOb;
-	var logObFilename = "log-"+dataForVue.wrtrMaxspeed+"-"+dataForVue.wrtrMinDistance+"-"+dataForVue.wrtrMinTimeFromLast+".txt";
+	var logObFilename = "log-"+dataForVue.wrtrMaxSpead+"-"+dataForVue.wrtrMinDistance+"-"+dataForVue.wrtrMinTimeFromLast+".txt";
 	function fail(e) {
 	alert(46);
 	alert(e);
@@ -2592,7 +2585,7 @@ function openFile(fileName)	{
 	}
 	
 function openFileAndWriteLog(fileName,str) {	
-	//alert("openFileandwriteLog");	
+	alert("openFileandwriteLog");	
 	window.resolveLocalFileSystemURL(cordova.file.externalDataDirectory, function(dir) {
 		console.log("got main dir",dir);
 		dir.getFile(fileName, {create:true}, function(file) {
@@ -2615,7 +2608,7 @@ function openFileAndWriteLog(fileName,str) {
 function writeLog(str) {
 	alert("writeLog");		
 	var vreme = formatDate(new Date());
-	logObFilename = "log-"+vreme+"-"+dataForVue.wrtrMaxspeed+"-"+dataForVue.wrtrMinDistance+"-"+dataForVue.wrtrMinTimeFromLast+".txt";
+	logObFilename = "log-"+vreme+"-"+dataForVue.wrtrMaxSpead+"-"+dataForVue.wrtrMinDistance+"-"+dataForVue.wrtrMinTimeFromLast+".txt";
 	openFileAndWriteLog(logObFilename,str);
 }
 
@@ -2735,7 +2728,7 @@ hereYouAre.setOpacity(0);
 var lastPositionLat = 45.172810033;
 var lastPositionLon = 19.752429989;
 var lastPositionTime = startTime;
-var trMaxspeed=50;//km
+var trMaxSpead=50;//km
 var trMinTimeFromLast=1;//s
 var trMinDistance=1  ;//m
 var trFirstPoint = 1;
@@ -2786,9 +2779,9 @@ for (var i = 1; i <= 3; i++){
 */
 
 
-function takeOrDropPoint(filter,speed,dist,timeFromLast){
+function takeOrDropPoint(filter,spead,dist,timeFromLast){
 	/*
-	if(speed < trMaxspeed){
+	if(spead < trMaxSpead){
 		if (dist > trMinDistance){
 			if(timeFromLast > trMinTimeFromLast){
 				return true;
@@ -2797,7 +2790,7 @@ function takeOrDropPoint(filter,speed,dist,timeFromLast){
 	}	
 	*/
 
-	if(speed < dataForVue.wrtrMaxspeed){
+	if(spead < dataForVue.wrtrMaxSpead){
 		if (dist > dataForVue.wrtrMinDistance){
 			if(timeFromLast > dataForVue.wrtrMinTimeFromLast){
 				return true;
@@ -2816,7 +2809,7 @@ function gr_showMaker(k1,k2){
 	var dist = distance(lastPositionLat,lastPositionLon,k1,k2) *1000;	//m
 	var timeFromLast = (timeSada - lastPositionTime ) /  1000;//s
 	var timeFromStart = (timeSada - startTime ) /1000; //s
-	var speed = (dist / timeFromLast) * 3.6 ;//km/h
+	var spead = (dist / timeFromLast) * 3.6 ;//km/h
 	
 	if(trFirstPoint){
 				lastPositionLat = k1;
@@ -2827,15 +2820,15 @@ function gr_showMaker(k1,k2){
 				//alert(1);
 				return;
 	}
-	//alert(speed + " / " + dist + " / " + timeFromLast);
+	//alert(spead + " / " + dist + " / " + timeFromLast);
 	/*
-	if(speed < trMaxspeed){
+	if(spead < trMaxSpead){
 	//alert(2);
 		if (dist > trMinDistance){
 		//alert(3);
 			if(timeFromLast > trMinTimeFromLast){
 			//alert(4);
-				var loc = {"tStart":timeFromStart,"tLast":timeFromLast,"x":k1,"y":k2,"dist":dist,"speed":speed};	
+				var loc = {"tStart":timeFromStart,"tLast":timeFromLast,"x":k1,"y":k2,"dist":dist,"spead":spead};	
 				arrLocations.push(loc);
 				hereYouAre.setLatLng([k1, k2]).update();
 				lastPositionLat = k1;
@@ -2845,10 +2838,10 @@ function gr_showMaker(k1,k2){
 		}
 	}
 	*/
-	 if(takeOrDropPoint("log",speed,dist,timeFromLast)){
-				//var loc = {"tStart":timeFromStart,"tLast":timeFromLast,"x":k1,"y":k2,"dist":dist,"speed":speed};
+	 if(takeOrDropPoint("log",spead,dist,timeFromLast)){
+				//var loc = {"tStart":timeFromStart,"tLast":timeFromLast,"x":k1,"y":k2,"dist":dist,"spead":spead};
 				
-				var loc = {"i":arrLocations.length,"tStart":timeFromStart,"tLast":timeFromLast,"x":k1,"y":k2,"dist":dist,"speed":speed,"fiter":'s: ' + dataForVue.wrtrMaxspeed + ' d: ' + dataForVue.wrtrMinDistance +  ' t: ' + dataForVue.wrtrMinTimeFromLast};		
+				var loc = {"tStart":timeFromStart,"tLast":timeFromLast,"x":k1,"y":k2,"dist":dist,"spead":spead,"fiter":'s: ' + dataForVue.wrtrMaxSpead + ' d: ' + dataForVue.wrtrMinDistance +  ' t: ' + dataForVue.wrtrMinTimeFromLast};		
 				arrLocations.push(loc);
 				hereYouAre.setLatLng([k1, k2]).update();
 	//			activeTrackPolyLine.addLatLng ([k1,k2]);	
@@ -2856,7 +2849,7 @@ function gr_showMaker(k1,k2){
 				lastPositionLon = k2;
 				lastPositionTime = timeSada;
 	  }
-	 if(takeOrDropPoint("show",speed,dist,timeFromLast)){
+	 if(takeOrDropPoint("show",spead,dist,timeFromLast)){
 				activeTrackPolyLine.addLatLng ([k1,k2]);	
 	  }
 	  
@@ -2965,13 +2958,10 @@ downloader.init({folder: "ftestzip1"});
 downloader.get("http://localhost:3002/testzip1_iz/testzip1.txt");
 */
 
-
-
-/*
 gr_showMaker11(11,12);
 gr_showMaker11(21,22);
 gr_showMaker11(31,32);
-*/
+
 
 
 
